ntasm/grammar.txt
;--------
;  It may not be proper for me to have the preproccessor grammar here
;  since our bottom level parser dosent actually recieve these tokens
;--------

<program> ::= <line>* T_EOL

<line>    ::= <pp_directive>
            | <statement>
            | T_EOL

<statement> ::= <statement_body> T_EOL

<statement_body> ::= <label_line>
                   | <constant_line>
                   | <variable_line>
                   | <raw_line>
                   | <code_line>

<pp_directive> ::= T_AT_DIRECTIVE <pp_identifier> T_EOL

<pp_arg>   ::= T_STRING
             | T_NUMBER
             | T_LABEL
             | T_IDENTIFIER

;--------
; I dont pass these in as tokens since its simpler
; to handle this as terminal strings
;--------
<pp_identifier> ::= "ifdef"    T_IDENTIFIER
                  | "ifndef"   T_IDENTIFIER
                  | "endif"
                  | "define"   T_IDENTIFIER <pp_arg>?
                  | "undefine" T_IDENTIFIER
                  | "include"  T_STRING

<label_line> ::= T_LABEL

<raw_value> ::=  T_LABEL
              |  T_NUMBER
              |  T_CHARACTER
              |  T_IDENTIFIER

<immediate> ::=  <plus_or_minus>? <raw_value>
<no_sign_immediate> ::= <raw_value>


<plus_or_minus> ::= T_PLUS
                  | T_MINUS

<register_and_immediate> ::= T_REGISTER <includes_immediate>
                           | <immediate> <includes_register>

;------
; I put ε isntead of T_EOL since its already satisfied by <statement>
;------
<includes_immediate> ::= <plus_or_minus> <no_sign_immediate>
                       | ε

<includes_register> ::= T_PLUS T_REGISTER
                      | ε

<constant_line> ::= T_CONSTANT T_IDENTIFIER <immediate>

<variable_line> ::= T_VARIABLE T_IDENTIFIER <variable_format>

<variable_format> ::= T_LBRACKET <no_sign_immediate> T_RBRACKET
                    | <immediate>*

<raw_line> ::= T_RAW <raw_line_value>*

<raw_line_value> ::= <immediate>
                   | T_STRING
                   | T_PACKED_STRING

<code_line> ::= <set_instruction>
              | <lod_instruction>
              | <str_instruction>
              | <psh_instruction>

<set_instruction> ::= T_SET T_REGISTER T_COMMA <register_and_immediate>

<lod_instruction> ::= T_LOD T_REGISTER T_COMMA T_LBRACKET <register_and_immediate> T_RBRACKET

<str_instruction> ::= T_SET T_LBRACKET <register_and_immediate> T_RBRACKET T_COMMA T_REGISTER

<psh_instruction> ::= T_PSH <psh_format>
<psh_format>      ::= T_LBRACKET T_REGISTER T_RBRACKET T_COMMA <register_and_immediate>
                    | T_REGISTER
                    | <immediate>
